--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                                         <li><a href="steming">STEMing</a></li>
                                         <li><a href="stemstars">STEMStars</a></li>
                                         <li><a href="stemspire">STEMspires</a></li>
+                                        <li><a href="stemscholar">STEMScholar</a></li>
+                                        <li><a href="stemscholar">STEMSocial</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-3">
