--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>STEMHub Foundation | Empowerment Through STEM Education</title>
+    <meta name="description" content="Empowerment Through STEM Education">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/logo_cropped.png">
     <link rel="stylesheet" href="css/slick.css">
@@ -34,7 +35,7 @@
             <span class="mdl-layout-title"><img src="img/logo_cropped.png" width="30px" alt=""> STEMHub Foundation</span>
             
             <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <nav class="mdl-navigation mdl-layout--large-screen-only fvkd">
                 <a class="mdl-navigation__link" href="home">Home</a>
                 <a class="mdl-navigation__link" href="program">Programs</a>
                 <a class="mdl-navigation__link" href="event">Event</a>
@@ -58,7 +59,7 @@
             </nav>
         </div>
 
-        <main style="background-color: #eeeeee; font-family: 'Ubuntu', sans-serif; font-size: 16px; color: #333;" class="mdl-layout__content">
+        <main style="background-color: #eeeeee; font-family: 'Ubuntu', sans-serif; font-size: 16px; color: #797979;" class="mdl-layout__content">
             <div class="page-content">
                 <div ng-view autoscroll></div>
             </div>
