--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <img src="img/canada.jpg" alt="" width="100px">
                     <img src="img/cservice.png" alt="" width="100px">
                     <img src="img/CSC-French.jpg" alt="" width="100px">
+                    <img src="img/academy.jpg" alt="" width="100px">
                 </div>
                 <div class="mdl-cell mdl-cell--2-col"></div>
             </div>
